--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
-    <head></head>
+
+<html lang="pt">
+    <head>
+        <title>PW</title>
+        <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
+    </head>
 
     <body>
-        <p>Olá</p>
+        <p>Hello World</p>
     </body>
 </html>
