--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<html lang="pt">
+<html>
     <head>
         <title>PW</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
