--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>PW</title>
-        <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
+        <link rel="icon" type="image" href="/assets/images/favicon.png">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
