--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Sabor de Pão</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" image="assets/logos/logo.png" />
+        <link rel="favicon" type="image/x-icon" image="/assets/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
