--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="css/styles.css" rel="stylesheet"/>
         <link href="css/custom-styles.css" rel="stylesheet"/>
     </head>
-    <body id="page-top">
+    <body id="page-top" class="light-mode">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
@@ -34,7 +34,7 @@
                             <a class="nav-link dropdown-toggle">Blog</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/subpages/events.html">Eventos</a></li>
-                                <li><a class="dropdown-item" href="/subpages/?">Reconhecimentos?</a></li>
+                                <li><a class="dropdown-item" href="/subpages/news.html">Notícias</a></li>
                                 <li><a class="dropdown-item" href="/subpages/galery.html">Galeria</a></li>
                             </ul>
                         </li>
@@ -42,6 +42,7 @@
                         <li class="nav-item"><a class="nav-link" href="#contact">Contactos</a></li>
                     </ul>
                 </div>
+                <div class="nav-item"><a id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></a></div>
             </div>
         </nav>
         <!-- Masthead-->
@@ -72,7 +73,7 @@
             </div>
         </section>
         <!-- Products-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section" id="portfolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Os Nossos Produtos</h2>
@@ -173,7 +174,7 @@
             </div>
         </section>
         <!-- Testimonials-->
-        <section class="page-section bg-ligh" id="testimonials">
+        <section class="page-section" id="testimonials">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Avaliações dos Nossos Clientes</h2>
@@ -485,6 +486,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/custom-scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
