Adjusted Portfolio BS CSS for Dark-Mode support

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li class="nav-item"><a class="nav-link" href="#contact">Contactos</a></li>
                     </ul>
                 </div>
-                <div class="nav-item"><a id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></a></div>
+                <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
         <!-- Masthead-->
