Orders Page Modifications

--- a/subpages/orders.html
+++ b/subpages/orders.html
@@ -45,14 +45,15 @@
                 <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="masthead_orders">
-            <div class="container">
-                <div class="masthead-heading text-uppercase">Sabor de Pão</div>
-                <div class="masthead-subheading">Encomendas</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#about">DESCOBRIR MAIS</a>
-            </div>
-        </header>
+        <section class="section-order-page">
+            <!-- Masthead-->
+            <header class="masthead_orders">
+                <div class="container">
+                    <div class="masthead-heading text-uppercase">Sabor de Pão</div>
+                    <div class="masthead-subheading">Encomendas</div>
+                </div>
+            </header>
+        </section>
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
