Added responsive logo image to the 'About' section

--- a/index.html
+++ b/index.html
@@ -61,14 +61,18 @@
                     <h2 class="section-heading text-uppercase">Sobre Nós</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div>
-                    <div class="text-justify">
+                <div class="row">
+                    <div class="text-justify col-md-8">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                     </div>
+                    <div class="col-md-4 col-8 mx-auto">
+                        <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
+                    </div>
+
                 </div>
             </div>
         </section>
