Added template page for subpages

--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Sabor de Pão 2023</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100063511573241" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="tel:+351914504607" aria-label="PhoneNumber"><i class="fa-solid fa-phone"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:sabordepao@sapo.pt" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://goo.gl/maps/yD2bnSaVC7YAFvQD6" aria-label="Location"><i class="fa-solid fa-location-dot"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        Programação Web - Grupo 6 (M2) - UA 2023
                     </div>
                 </div>
             </div>
@@ -491,10 +492,5 @@
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <script src="js/custom-scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
