Added Costumer Testimonials

--- a/index.html
+++ b/index.html
@@ -184,14 +184,90 @@
                     <h2 class="section-heading text-uppercase">Avaliações dos Nossos Clientes</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div>
-                    <div class="text-justify">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+                <div class="row g-2">
+                    <div class="col-lg-6 costumer-testimonial">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/rafael-almeida.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Rafael Almeida</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="text-justify">
+                            Simplesmente fantástico, especialmente pelo sabor e todo o cuidado e atenção que começa na gerência.
+                            Ainda bem que esta loja abriu, resolveu os meus problemas de onde comprar produtos sem glúten e sem leite.
+                            E para melhorar a situação, os produtos são biológicos e o mais saudáveis possível.
+                            Resta-me apenas esperar pelas mesinhas para se poder comer no local.
+                        </div>
                     </div>
+                    <div class="col-lg-6 costumer-testimonial">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/monica-rodrigues.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Mónica Rodrigues</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="text-justify">
+                            Produtos sem gluten e sem proteína de leite, não havendo contaminação cruzada.
+                            Pão de aveia, pão de alfarroba e broa de milho muito bons.
+                            A tarte de maçã é uma delícia!
+                            Aconselho vivamente!
+                        </div>
+                    </div>
+                    <div class="col-lg-6 costumer-testimonial">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/flor-pires.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Flor Pires</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="text-justify">
+                            Excelente experiência!
+                            Estivemos hoje na padaria e tivemos o prazer de conhecer o Sr. Rui e a sua esposa,
+                            pessoas adoráveis e que se dispuseram a explicar-nos tudo sobre os seus produtos biológicos
+                            e como confeccionam os seus produtos. Tudo sem glúten/livre de diário/vegano e orgânico.
+                            Compramos pão, croissants de ovos, pastéis de atum, iogurte de mirtilo e “croquetes” veganos
+                            tudo delicioso! Certamente é um local a visitar sempre que viermos a Portugal (S. João da Madeira)!
+                            Altamente recomendado! Um lugar para ir se você tem alguma intolerância alimentar!
+                        </div>
+                    </div>
+                    <div class="col-lg-6 costumer-testimonial">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/flor-pires.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Flor Pires</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="text-justify">
+                            Excelente experiência!
+                            Estivemos hoje na padaria e tivemos o prazer de conhecer o Sr. Rui e a sua esposa,
+                            pessoas adoráveis e que se dispuseram a explicar-nos tudo sobre os seus produtos biológicos
+                            e como confeccionam os seus produtos. Tudo sem glúten/livre de diário/vegano e orgânico.
+                            Compramos pão, croissants de ovos, pastéis de atum, iogurte de mirtilo e “croquetes” veganos
+                            tudo delicioso! Certamente é um local a visitar sempre que viermos a Portugal (S. João da Madeira)!
+                            Altamente recomendado! Um lugar para ir se você tem alguma intolerância alimentar!
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
