--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/subpages/events.html">Eventos</a></li>
-                                <li><a class="dropdown-item" href="/subpages/news.html">Notícias</a></li>
-                                <li><a class="dropdown-item" href="/subpages/galery.html">Galeria</a></li>
+                                <li><a class="dropdown-item" href="/events.html">Eventos</a></li>
+                                <li><a class="dropdown-item" href="/news.html">Notícias</a></li>
+                                <li><a class="dropdown-item" href="/gallery.html">Galeria</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/subpages/orders.html">Encomendas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/orders.html">Encomendas</a></li>subpage-template.html
                         <li class="nav-item"><a class="nav-link" href="#contact">Contactos</a></li>
                     </ul>
                 </div>
@@ -184,7 +184,7 @@
                     <h2 class="section-heading text-uppercase">Avaliações dos Nossos Clientes</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div class="row g-2">
+                <div class="row g-lg-2">
                     <div class="col-lg-6 costumer-testimonial">
                         <div class="row">
                             <img class="col-4" src="assets/img/costumers/rafael-almeida.png" alt="costumer-portrait">
@@ -267,7 +267,6 @@
                             Altamente recomendado! Um lugar para ir se você tem alguma intolerância alimentar!
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
