--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.png" alt="..." /></a>
+                <a class="navbar-brand" href="/index.html#page-top"><img src="assets/img/navbar-logo.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/index.html">Sobre Nós</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/index.html/#portfolio">Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/index.html#portfolio">Produtos</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
                             <ul class="dropdown-menu">
@@ -39,17 +39,17 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/orders.html">Encomendas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/index.html/#contact">Contactos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/index.html#contact">Contactos</a></li>
                     </ul>
                 </div>
                 <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
-        <!-- CHANGE_FOR_THE_NAME_HERE-->
-        <section class="page-section" id="INSERT_ID_HERE">
+        <!-- events-->
+        <section class="page-section" id="events">
             <div class="container">
                 <div class="text">
-                    <h2 class="section-heading text-uppercase">Sobre Nós</h2>
+                    <h2 class="section-heading text-uppercase">Eventos</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
